INCLUDES = $(all_includes)
METASOURCES = AUTO
lib_LIBRARIES = libbabel.a
libbabel_a_SOURCES = adrift.c advsys.c agt.c alan.c babel.c babel.h \
	babel_handler.c babel_handler.h babel_ifiction_functions.c babel_multi_functions.c \
	babel_story_functions.c blorb.c executable.c glulx.c hugo.c ifiction.c ifiction.h level9.c \
	magscrolls.c md5.c md5.h misc.c modules.h register.c register_ifiction.c tads.c \
	tads.h tads2.c tads3.c treaty.h treaty_builder.h zcode.c
